style(fixed overflow-x background issue): fixed overflow-x issue with whitespace leak
changed dimensions for overflow x background so that darkmode background stretches past navbar and
footer

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -20,6 +20,7 @@
     justify-content: space-around;
     align-items: center;
     width: 80vw;
+    height: min-content;
     margin: 0 auto;
 }
 
